# lindisc

./: Cargo.toml  README.md  config.example.toml
.github/workflows/: rust.yml
src/: config.rs  discord.rs  linear.rs  main.rs
